acmg/deployment/waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
 name: nginx
 annotations:
   istio.io/service-account: nginx
spec:
 gatewayClassName: istio-mesh
