acmg/deployment/nginx-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: nginx-viewer
 namespace: default
spec:
 selector:
   matchLabels:
     app: nginx
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/nginx"]
   to:
   - operation:
       methods: ["GET"]
